tests/baselines/reference/indexWithoutParamType.errors.txt
==== tests/cases/compiler/indexWithoutParamType.ts (1 errors) ====
    var y: { []; } // Error
             ~
!!! indexWithoutParamType.ts(1,10): error TS1096: Index signature must have exactly one parameter.